--- a/app/index.html
+++ b/app/index.html
@@ -94,8 +94,234 @@
             <div class="base-title"><span><i>По</i>смотрите наш каталог</span></div>
             <div class="product__grid">
                 <div class="row">
-                    <div class="col-md-6 product__gallery"></div>
-                    <div class="col-md-6 product__info"></div>
+                    <div class="col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12 p-0 mb-20">
+                            <div class="row">
+                                <div class="col-md-8 pr-0">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/gallery/photo.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-4 pr-0">
+                                    <div class="col-md-12 p-0 mb-15">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="col-md-12 p-0">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-3.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 p-0">
+                            <div class="row">
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 product__info">
+                        <div class="product__table">
+                            <div class="info__item">
+                                <div class="info__key">Код товара: </div>
+                                <div class="info__value"> 1825</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Размер: </div>
+                                <div class="info__value">
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                </div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Материал:</div>
+                                <div class="info__value">Итальянская кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подкладка:</div>
+                                <div class="info__value">Натуральная кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подошва:</div>
+                                <div class="info__value">Пенополиуретан</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Шнурки:</div>
+                                <div class="info__value">Вощенный шнурок</div>
+                            </div>
+                        </div>
+                        <div class="product__descr">
+                            <div class="product__price">1190 грн.</div>
+                            <a href="#" class="button button--buy">Купить сейчас</a>
+                        </div>
+                    </div>
+                </div><!-- /row -->
+                <div class="row">
+                    <div class="col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12 p-0 mb-20">
+                            <div class="row">
+                                <div class="col-md-8 pr-0">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/gallery/photo.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-4 pr-0">
+                                    <div class="col-md-12 p-0 mb-15">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="col-md-12 p-0">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-3.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 p-0">
+                            <div class="row">
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 product__info">
+                        <div class="product__table">
+                            <div class="info__item">
+                                <div class="info__key">Код товара: </div>
+                                <div class="info__value"> 1825</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Размер: </div>
+                                <div class="info__value">
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                </div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Материал:</div>
+                                <div class="info__value">Итальянская кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подкладка:</div>
+                                <div class="info__value">Натуральная кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подошва:</div>
+                                <div class="info__value">Пенополиуретан</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Шнурки:</div>
+                                <div class="info__value">Вощенный шнурок</div>
+                            </div>
+                        </div>
+                        <div class="product__descr">
+                            <div class="product__price">1190 грн.</div>
+                            <a href="#" class="button button--buy">Купить сейчас</a>
+                        </div>
+                    </div>
+                </div><!-- /row -->
+                <div class="row">
+                    <div class="col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12 p-0 mb-20">
+                            <div class="row">
+                                <div class="col-md-8 pr-0">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/gallery/photo.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-4 pr-0">
+                                    <div class="col-md-12 p-0 mb-15">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="col-md-12 p-0">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-3.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 p-0">
+                            <div class="row">
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 product__info">
+                        <div class="product__table">
+                            <div class="info__item">
+                                <div class="info__key">Код товара: </div>
+                                <div class="info__value"> 1825</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Размер: </div>
+                                <div class="info__value">
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                </div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Материал:</div>
+                                <div class="info__value">Итальянская кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подкладка:</div>
+                                <div class="info__value">Натуральная кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подошва:</div>
+                                <div class="info__value">Пенополиуретан</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Шнурки:</div>
+                                <div class="info__value">Вощенный шнурок</div>
+                            </div>
+                        </div>
+                        <div class="product__descr">
+                            <div class="product__price">1190 грн.</div>
+                            <a href="#" class="button button--buy">Купить сейчас</a>
+                        </div>
+                    </div>
+                </div><!-- /row -->
+            </div>
+        </div>
+    </section>
+
+    <section class="photos">
+        <div class="container">
+            <div class="base-title"><span><i>Фо</i>то товара</span></div>
+            <div class="photos__grid">
+                <div class="row">
+                    <div class="col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12 p-0 mb-20">
+                            <div class="row">
+                                <div class="col-md-12 pr-0">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/photos-1-1.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>    
+                            <div class="row">
+                                <div class="col-md-6 p-0">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-6 p-0">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
