--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,13 @@
                     <h1 class="main-title title-font">Кожанная обувь от производителя по оптовым ценам</h1>
                     <div class="hero__text title-font">закажи и мы привезем померять их вам в удобное для вас место г.Харьков</div>
                     <form action="#" class="base-form">
-                        <input class="name" type="text" name="name" placeholder="Ваше имя">
-                        <input id="phone" class="phone" type="tel" name="phone" placeholder="Ваш телефон">
+                        <!-- Hidden Required Fields -->
+                        <input type="hidden" name="project_name" value="Shoes Concept">
+                        <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+                        <input type="hidden" name="form_subject" value="Form Subject">
+                        <!-- END Hidden Required Fields -->
+                        <input required class="name" type="text" name="name" placeholder="Ваше имя">
+                        <input required id="phone" class="phone" type="tel" name="phone" placeholder="Ваш телефон">
                         <button class="button">Хочу померять</button>
                     </form>
                 </div>
@@ -306,26 +311,139 @@
                     <div class="col-md-6 product__gallery gallery--init">
                         <div class="col-md-12 p-0 mb-20">
                             <div class="row">
-                                <div class="col-md-12 pr-0">
+                                <div class="col-md-12  mb-20">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/photos-1-1.jpg" alt="">
                                     </a>
                                 </div>
                             </div>    
-                            <div class="row">
-                                <div class="col-md-6 p-0">
+                            <div class="row mb-20">
+                                <div class="col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
-                                <div class="col-md-6 p-0">
+                                <div class="col-md-6 ">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                             </div>
+                            <div class="row mb-20">
+                                <div class="col-md-6">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-6">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12 p-0 mb-20">    
+                            <div class="row mb-20">
+                                <div class="col-md-6">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-6 ">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="row mb-20">
+                                <div class="col-md-6">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                                <div class="col-md-6">
+                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12  mb-20">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/photos-1-1.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--//row-->
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="container">
+            <div class="base-title"><span>Наши контакты</span></div>
+            <div class="row">
+                <div class="col-10 offset-1">
+                    <div class="row">
+                        <div class="col-md-4 contact__item">
+                            <div class="contact__item__title">Связь с нами</div>
+                            <a href="tel:+380958518015">+38 (095) 851-80-15</a>
+                            <a href="malito:alenka57300@gmail.com">alenka57300@gmail.com</a>
+                            <div>г. Харьков</div>
+                        </div>
+                        <div class="col-md-4 contact__item">
+                            <div class="contact__item__title">Остались вопросы?</div>
+                            <form action="#" class="base-form">
+                                <!-- Hidden Required Fields -->
+                                <input type="hidden" name="project_name" value="Shoes Concept">
+                                <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+                                <input type="hidden" name="form_subject" value="Form Subject">
+                                <!-- END Hidden Required Fields -->
+                                <input required class="name" type="text" name="Name" placeholder="Ваше имя">
+                                <input required id="phone_2" class="phone" type="tel" name="Phone" placeholder="Ваш телефон">
+                                <button class="button">Задать вопрос</button>
+                            </form>
+                        </div>
+                        <div class="col-md-4 contact__item contact__item-last">
+                            <div class="contact__item__title">Мы всегда на связи!</div>
+                            <div>Если у Вас возникли вопросы:</div>
+                            <ul class="contact__list">
+                                <li>1. по поводу качества,</li>
+                                <li>2. доставки и оплаты,</li>
+                                <li>3. можно ли примерять,</li>
+                                <li>4. соответствует ли размер,</li>
+                                <li>5. возврат</li>
+                            </ul>
+                            <div>Мы всегда готовы ответить на интерисующий Вас вопрос.</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="flex-grid">
+                <a href="index.html" class="logo"><img src="img/logo-footer.png" alt="Shoes concept"></a>
+                <div class="company-description">Продажа кожанной обуви от производителя</div>
+                <ul class="social">
+                    <li><a target="_blank" href="https://www.facebook.com/pg/%D0%9C%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD-Shoes-Concept-%D0%BA%D0%BE%D0%B6%D0%B0%D0%BD%D0%B0%D1%8F-%D0%BE%D0%B1%D1%83%D0%B2%D1%8C-%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2-1461896510604274/shop/?ref=page_internal"></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/shoesconcept/"></a></li>
+                </ul>
+                <div class="phones">
+                    <a href="tel:+38 (095) 851-80-15">+38 (095) 851-80-15</a>
+                    <a href="tel:+38 (095) 851-80-15">+38 (095) 851-80-15</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div class="hidden">
+        <form id="form" class="base-form">
+            <div class="base-title"><span><i>Отправить заявку</i></span></div>
+            <!-- Hidden Required Fields -->
+            <input type="hidden" name="project_name" value="Shoes Concept">
+            <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+            <input type="hidden" name="form_subject" value="Form Subject">
+            <!-- END Hidden Required Fields -->
+            <input required class="name" type="text" name="Name" placeholder="Ваше имя">
+            <input class="email" type="email" name="E-mail" placeholder="Ваш E-mail" required><br>
+            <input required id="phone_2" class="phone" type="tel" name="Phone" placeholder="Ваш телефон">
+            <button class="button">Отправить</button>
+        </form>
+    </div>
+
+
+
 
     <script src="js/scripts.min.js"></script>
 
