--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Shoes Concept">
                         <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
-                        <input type="hidden" name="form_subject" value="Form Subject">
+                        <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                         <!-- END Hidden Required Fields -->
                         <input required class="name" type="text" name="name" placeholder="Ваше имя">
                         <input required id="phone" class="phone" type="tel" name="phone" placeholder="Ваш телефон">
@@ -385,7 +385,7 @@
                                 <!-- Hidden Required Fields -->
                                 <input type="hidden" name="project_name" value="Shoes Concept">
                                 <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
-                                <input type="hidden" name="form_subject" value="Form Subject">
+                                <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                                 <!-- END Hidden Required Fields -->
                                 <input required class="name" type="text" name="Name" placeholder="Ваше имя">
                                 <input required id="phone_2" class="phone" type="tel" name="Phone" placeholder="Ваш телефон">
@@ -433,7 +433,7 @@
             <!-- Hidden Required Fields -->
             <input type="hidden" name="project_name" value="Shoes Concept">
             <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
-            <input type="hidden" name="form_subject" value="Form Subject">
+            <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
             <!-- END Hidden Required Fields -->
             <input required class="name" type="text" name="Name" placeholder="Ваше имя">
             <input class="email" type="email" name="E-mail" placeholder="Ваш E-mail" required><br>
