--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                     <form action="#" class="base-form">
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Shoes Concept">
-                        <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+                        <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
                         <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                         <!-- END Hidden Required Fields -->
                         <input required class="name" type="text" name="name" placeholder="Ваше имя">
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="base-title"><span><i>Пр</i>еимущества</span></div>
             <div class="row advantages__row">
-                <div class="col-md-5">
+                <div class="col-md-5 col-sm-12">
                     <ul class="advantages__list">
                         <li>Качественная подошва полиуретан</li>
                         <li>Натуральная итальянская кожа и замша</li>
@@ -81,10 +81,10 @@
     <section class="order">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 order__img">
+                <div class="col-md-7 order__img hidden-sm hidden-xs">
                     <img src="img/shoes-bg.png" alt="">
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 col-xs-12">
                     <div class="order__content">
                         <div class="order__text">Закажи сейчас и бесплатная доставка гарантирована</div>
                         <a href="#" class="button button--white">Заказать</a>
@@ -384,7 +384,7 @@
                             <form action="#" class="base-form">
                                 <!-- Hidden Required Fields -->
                                 <input type="hidden" name="project_name" value="Shoes Concept">
-                                <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+                                <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
                                 <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                                 <!-- END Hidden Required Fields -->
                                 <input required class="name" type="text" name="Name" placeholder="Ваше имя">
@@ -432,7 +432,7 @@
             <div class="base-title"><span><i>Отправить заявку</i></span></div>
             <!-- Hidden Required Fields -->
             <input type="hidden" name="project_name" value="Shoes Concept">
-            <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
+            <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
             <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
             <!-- END Hidden Required Fields -->
             <input required class="name" type="text" name="Name" placeholder="Ваше имя">
@@ -441,6 +441,13 @@
             <button class="button">Отправить</button>
         </form>
     </div>
+
+    <div class="send-mesages">
+        <div>Ваше сообщение отправлено.</div>
+        <div>Мы свяжемся с Вами в ближайшее время!</div>
+    </div>
+
+
 
 
 
