--- a/app/index.html
+++ b/app/index.html
@@ -99,8 +99,8 @@
             <div class="base-title"><span><i>По</i>смотрите наш каталог</span></div>
             <div class="product__grid">
                 <div class="row">
-                    <div class="col-md-6 product__gallery gallery--init">
-                        <div class="col-md-12 p-0 mb-20">
+                    <div class="col-xs-6 col-md-6 product__gallery gallery--init">
+                        <div class="col-md-12  p-0 mb-20">
                             <div class="row">
                                 <div class="col-md-8 pr-0">
                                     <a href="img/gallery/photo.jpg">
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 product__info">
+                    <div class="col-xs-6  col-md-6 product__info">
                         <div class="product__table">
                             <div class="info__item">
                                 <div class="info__key">Код товара: </div>
