--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                     <form action="#" class="base-form">
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Shoes Concept">
-                        <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+                        <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
                         <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                         <!-- END Hidden Required Fields -->
                         <input required class="name" type="text" name="name" placeholder="Ваше имя">
@@ -81,10 +81,10 @@
     <section class="order">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 order__img hidden-sm hidden-xs">
+                <div class="d-none d-sm-block col-7 order__img">
                     <img src="img/shoes-bg.png" alt="">
                 </div>
-                <div class="col-md-5 col-xs-12">
+                <div class="col-12 col-sm-5 col-md-5">
                     <div class="order__content">
                         <div class="order__text">Закажи сейчас и бесплатная доставка гарантирована</div>
                         <a href="#" class="button button--white">Заказать</a>
@@ -99,15 +99,15 @@
             <div class="base-title"><span><i>По</i>смотрите наш каталог</span></div>
             <div class="product__grid">
                 <div class="row">
-                    <div class="col-xs-6 col-md-6 product__gallery gallery--init">
+                    <div class="col-6 product__gallery gallery--init">
                         <div class="col-md-12  p-0 mb-20">
                             <div class="row">
-                                <div class="col-md-8 pr-0">
+                                <div class="col-12 col-sm-8 col-md-8 pr-0">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/gallery/photo.jpg" alt="">
                                     </a>
                                 </div>
-                                <div class="col-md-4 pr-0">
+                                <div class="d-none d-sm-block col-4 pr-0">
                                     <div class="col-md-12 p-0 mb-15">
                                         <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
                                     </div>
@@ -119,13 +119,13 @@
                         </div>
                         <div class="col-md-12 p-0">
                             <div class="row">
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6  col-md-6 product__info">
+                    <div class="col-6 product__info">
                         <div class="product__table">
                             <div class="info__item">
                                 <div class="info__key">Код товара: </div>
@@ -166,15 +166,15 @@
                     </div>
                 </div><!-- /row -->
                 <div class="row">
-                    <div class="col-md-6 product__gallery gallery--init">
-                        <div class="col-md-12 p-0 mb-20">
+                    <div class="col-6 product__gallery gallery--init">
+                        <div class="col-md-12  p-0 mb-20">
                             <div class="row">
-                                <div class="col-md-8 pr-0">
+                                <div class="col-12 col-sm-8 col-md-8 pr-0">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/gallery/photo.jpg" alt="">
                                     </a>
                                 </div>
-                                <div class="col-md-4 pr-0">
+                                <div class="d-none d-sm-block col-4 pr-0">
                                     <div class="col-md-12 p-0 mb-15">
                                         <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
                                     </div>
@@ -186,13 +186,13 @@
                         </div>
                         <div class="col-md-12 p-0">
                             <div class="row">
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 product__info">
+                    <div class="col-6 product__info">
                         <div class="product__table">
                             <div class="info__item">
                                 <div class="info__key">Код товара: </div>
@@ -233,15 +233,15 @@
                     </div>
                 </div><!-- /row -->
                 <div class="row">
-                    <div class="col-md-6 product__gallery gallery--init">
-                        <div class="col-md-12 p-0 mb-20">
+                    <div class="col-6 product__gallery gallery--init">
+                        <div class="col-md-12  p-0 mb-20">
                             <div class="row">
-                                <div class="col-md-8 pr-0">
+                                <div class="col-12 col-sm-8 col-md-8 pr-0">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/gallery/photo.jpg" alt="">
                                     </a>
                                 </div>
-                                <div class="col-md-4 pr-0">
+                                <div class="d-none d-sm-block col-4 pr-0">
                                     <div class="col-md-12 p-0 mb-15">
                                         <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
                                     </div>
@@ -253,13 +253,13 @@
                         </div>
                         <div class="col-md-12 p-0">
                             <div class="row">
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
-                                <div class="col-md-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 product__info">
+                    <div class="col-6 product__info">
                         <div class="product__table">
                             <div class="info__item">
                                 <div class="info__key">Код товара: </div>
@@ -307,9 +307,9 @@
         <div class="container">
             <div class="base-title"><span><i>Фо</i>то товара</span></div>
             <div class="photos__grid">
-                <div class="row">
-                    <div class="col-md-6 product__gallery gallery--init">
-                        <div class="col-md-12 p-0 mb-20">
+                <div class="row product__gallery gallery--init">
+                    <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-12 p-0 mb-20">
                             <div class="row">
                                 <div class="col-md-12  mb-20">
                                     <a href="img/gallery/photo.jpg">
@@ -318,43 +318,43 @@
                                 </div>
                             </div>    
                             <div class="row mb-20">
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
-                                <div class="col-md-6 ">
+                                <div class="col-6 col-md-6 ">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="row mb-20">
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 product__gallery gallery--init">
+                    <div class="col-md-6">
                         <div class="col-md-12 p-0 mb-20">    
                             <div class="row mb-20">
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
-                                <div class="col-md-6 ">
+                                <div class="col-6 col-md-6 ">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="row mb-20">
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-6 col-md-6">
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-12  mb-20">
+                                <div class="col-12 col-md-12  mb-20">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/photos-1-1.jpg" alt="">
                                     </a>
@@ -371,7 +371,7 @@
         <div class="container">
             <div class="base-title"><span>Наши контакты</span></div>
             <div class="row">
-                <div class="col-10 offset-1">
+                <div class="col-12 col-md-10 offset-md-1">
                     <div class="row">
                         <div class="col-md-4 contact__item">
                             <div class="contact__item__title">Связь с нами</div>
@@ -384,7 +384,7 @@
                             <form action="#" class="base-form">
                                 <!-- Hidden Required Fields -->
                                 <input type="hidden" name="project_name" value="Shoes Concept">
-                                <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+                                <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
                                 <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                                 <!-- END Hidden Required Fields -->
                                 <input required class="name" type="text" name="Name" placeholder="Ваше имя">
@@ -432,11 +432,11 @@
             <div class="base-title"><span><i>Отправить заявку</i></span></div>
             <!-- Hidden Required Fields -->
             <input type="hidden" name="project_name" value="Shoes Concept">
-            <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+            <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
             <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
             <!-- END Hidden Required Fields -->
             <input required class="name" type="text" name="Name" placeholder="Ваше имя">
-            <input class="email" type="email" name="E-mail" placeholder="Ваш E-mail" required><br>
+            <!-- <input class="email" type="email" name="E-mail" placeholder="Ваш E-mail" required><br> -->
             <input required id="phone_2" class="phone" type="tel" name="Phone" placeholder="Ваш телефон">
             <button class="button">Отправить</button>
         </form>
