--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <!-- Custom Browsers Color End -->
 
     <link rel="stylesheet" href="css/main.min.css">
+    <style>html { background-color: #540404; }</style>
 
 </head>
 
@@ -81,10 +82,10 @@
     <section class="order">
         <div class="container">
             <div class="row">
-                <div class="d-none d-sm-block col-7 order__img">
+                <div class="d-none d-sm-none d-md-none d-xl-block col-7 order__img">
                     <img src="img/shoes-bg.png" alt="">
                 </div>
-                <div class="col-12 col-sm-5 col-md-5">
+                <div class="col-12 col-sm-5 col-md-12 col-xs-5">
                     <div class="order__content">
                         <div class="order__text">Закажи сейчас и бесплатная доставка гарантирована</div>
                         <a href="#" class="button button--white">Заказать</a>
@@ -142,72 +143,9 @@
                                     <span>40 (27 см.)</span>
                                 </div>
                             </div>
-                            <div class="info__item">
-                                <div class="info__key">Материал:</div>
-                                <div class="info__value">Итальянская кожа</div>
-                            </div>
-                            <div class="info__item">
-                                <div class="info__key">Подкладка:</div>
-                                <div class="info__value">Натуральная кожа</div>
-                            </div>
-                            <div class="info__item">
-                                <div class="info__key">Подошва:</div>
-                                <div class="info__value">Пенополиуретан</div>
-                            </div>
-                            <div class="info__item">
-                                <div class="info__key">Шнурки:</div>
-                                <div class="info__value">Вощенный шнурок</div>
-                            </div>
-                        </div>
-                        <div class="product__descr">
-                            <div class="product__price">1190 грн.</div>
-                            <a href="#" class="button button--buy">Купить сейчас</a>
-                        </div>
-                    </div>
-                </div><!-- /row -->
-                <div class="row">
-                    <div class="col-6 product__gallery gallery--init">
-                        <div class="col-md-12  p-0 mb-20">
-                            <div class="row">
-                                <div class="col-12 col-sm-8 col-md-8 pr-0">
-                                    <a href="img/gallery/photo.jpg">
-                                        <img src="img/gallery/photo.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="d-none d-sm-block col-4 pr-0">
-                                    <div class="col-md-12 p-0 mb-15">
-                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
-                                    </div>
-                                    <div class="col-md-12 p-0">
-                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-3.jpg" alt=""></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 p-0">
-                            <div class="row">
-                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
-                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
-                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 product__info">
-                        <div class="product__table">
-                            <div class="info__item">
-                                <div class="info__key">Код товара: </div>
-                                <div class="info__value"> 1825</div>
-                            </div>
-                            <div class="info__item">
-                                <div class="info__key">Размер: </div>
-                                <div class="info__value">
-                                    <span>40 (27 см.)</span>
-                                    <span>45 (30,5 см.)</span>
-                                    <span>40 (27 см.)</span>
-                                    <span>45 (30,5 см.)</span>
-                                    <span>45 (30,5 см.)</span>
-                                    <span>40 (27 см.)</span>
-                                </div>
+                            <div class="info__item mobile__size">
+                                <div class="info__key">Размер:</div>
+                                <div class="info__value">40-45</div>
                             </div>
                             <div class="info__item">
                                 <div class="info__key">Материал:</div>
@@ -275,6 +213,81 @@
                                     <span>45 (30,5 см.)</span>
                                     <span>40 (27 см.)</span>
                                 </div>
+                            </div>
+                            <div class="info__item mobile__size">
+                                <div class="info__key">Размер:</div>
+                                <div class="info__value">40-45</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Материал:</div>
+                                <div class="info__value">Итальянская кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подкладка:</div>
+                                <div class="info__value">Натуральная кожа</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Подошва:</div>
+                                <div class="info__value">Пенополиуретан</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Шнурки:</div>
+                                <div class="info__value">Вощенный шнурок</div>
+                            </div>
+                        </div>
+                        <div class="product__descr">
+                            <div class="product__price">1190 грн.</div>
+                            <a href="#" class="button button--buy">Купить сейчас</a>
+                        </div>
+                    </div>
+                </div><!-- /row -->
+                <div class="row">
+                    <div class="col-6 product__gallery gallery--init">
+                        <div class="col-md-12  p-0 mb-20">
+                            <div class="row">
+                                <div class="col-12 col-sm-8 col-md-8 pr-0">
+                                    <a href="img/gallery/photo.jpg">
+                                        <img src="img/gallery/photo.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="d-none d-sm-block col-4 pr-0">
+                                    <div class="col-md-12 p-0 mb-15">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-2.jpg" alt=""></a>
+                                    </div>
+                                    <div class="col-md-12 p-0">
+                                        <a href="img/gallery/photo.jpg"><img src="img/product-1-3.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 p-0">
+                            <div class="row">
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/gallery/photo.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                                <div class="col-4 pr-0"><a href="img/gallery/photo.jpg"><img src="img/product-1-4.jpg" alt=""></a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 product__info">
+                        <div class="product__table">
+                            <div class="info__item">
+                                <div class="info__key">Код товара: </div>
+                                <div class="info__value"> 1825</div>
+                            </div>
+                            <div class="info__item">
+                                <div class="info__key">Размер: </div>
+                                <div class="info__value">
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>45 (30,5 см.)</span>
+                                    <span>40 (27 см.)</span>
+                                </div>
+                            </div>
+                            <div class="info__item mobile__size">
+                                <div class="info__key">Размер:</div>
+                                <div class="info__value">40-45</div>
                             </div>
                             <div class="info__item">
                                 <div class="info__key">Материал:</div>
