--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
                 <div class="d-none d-sm-none d-md-none d-xl-block col-7 order__img">
                     <img src="img/shoes-bg.png" alt="">
                 </div>
-                <div class="col-12 col-sm-5 col-md-12 col-xs-5">
+                <div class="col-12 col-sm-5 col-md-12 col-xl-5">
                     <div class="order__content">
                         <div class="order__text">Закажи сейчас и бесплатная доставка гарантирована</div>
                         <a href="#" class="button button--white">Заказать</a>
