--- a/app/index.html
+++ b/app/index.html
@@ -324,7 +324,7 @@
                     <div class="col-12 col-md-6">
                         <div class="col-12 col-md-12 p-0 mb-20">
                             <div class="row">
-                                <div class="col-md-12  mb-20">
+                                <div class="col-md-12  mb-20 photo--big">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/photos-1-1.jpg" alt="">
                                     </a>
@@ -363,11 +363,11 @@
                                     <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
                                 </div>
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photos-1-2.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/test.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12 col-md-12  mb-20">
+                                <div class="col-12 col-md-12  mb-20 photo--big">
                                     <a href="img/gallery/photo.jpg">
                                         <img src="img/photos-1-1.jpg" alt="">
                                     </a>
@@ -382,7 +382,7 @@
 
     <section class="contact">
         <div class="container">
-            <div class="base-title"><span>Наши контакты</span></div>
+            <div class="base-title"><span><i>На</i>ши контакты</span></div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
                     <div class="row">
